<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_screens">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:text="@string/choose_role_title"
        android:textSize="32sp"

        android:textStyle="bold"
        android:textColor="@color/black_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_customer_block"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ripple_customer_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="42dp"
        android:text="@string/customer_title"
        android:textSize="16sp"
        android:lineSpacingExtra="4sp"
        android:textColor="@color/black_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_customer_block"
        app:layout_constraintTop_toTopOf="@+id/iv_customer_block" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/customer_description"
        android:textSize="14sp"
        android:lineSpacingExtra="4sp"
        android:textColor="@color/black_text"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/iv_customer_block"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_customer_block"
        app:layout_constraintEnd_toEndOf="@+id/iv_customer_block"
        app:layout_constraintTop_toTopOf="@+id/iv_customer_block"
        app:srcCompat="@drawable/ic_customer" />

    <ImageView
        android:id="@+id/iv_seller_block"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_customer_block"
        app:srcCompat="@drawable/ripple_customer_block" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="42dp"
        android:text="@string/seller_title"
        android:textSize="16sp"
        android:lineSpacingExtra="4sp"
        android:textColor="@color/black_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_seller_block"
        app:layout_constraintTop_toTopOf="@+id/iv_seller_block" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:textStyle="normal"
        android:text="@string/seller_description"
        android:textSize="14sp"
        android:lineSpacingExtra="4sp"
        android:textColor="@color/black_text"
        app:layout_constraintStart_toStartOf="@+id/iv_seller_block"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_seller_block"
        app:layout_constraintEnd_toEndOf="@+id/iv_seller_block"
        app:layout_constraintTop_toTopOf="@+id/iv_seller_block"
        app:srcCompat="@drawable/ic_seller" />
</androidx.constraintlayout.widget.ConstraintLayout>